--- a/.github/workflows/natalie-scraping-slackbot.yml
+++ b/.github/workflows/natalie-scraping-slackbot.yml
@@ -2,7 +2,7 @@ name: Fetch Natalie News and Post to Slack
 
 on:
   schedule:
-    - cron: '00 16 * * *' # JST 19時に実行
+    - cron: '00 10 * * *' # JST 19:00 に実行 (UTC 10:00)
   workflow_dispatch:
 
 jobs:
@@ -12,17 +12,17 @@ jobs:
     steps:
       - name: リポジトリのチェックアウト
         uses: actions/checkout@v4
-      
-      - env:
-          TZ: 'Asia/Tokyo'
+
+      - name: タイムゾーンの設定
+        run: echo "TZ=Asia/Tokyo" >> $GITHUB_ENV
 
       - name: Go のセットアップ
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23.0' # 最新のGoバージョンを指定
+          go-version: '1.23.0'
 
       - name: 依存関係の取得
-        run: go mod tidy
+        run: go mod download
 
       - name: スクリプトの実行
         env:
