--- a/.github/workflows/natalie-scraping-slackbot.yml
+++ b/.github/workflows/natalie-scraping-slackbot.yml
@@ -6,23 +6,23 @@ on:
   workflow_dispatch:
 
 jobs:
-  scrape_and_post:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: リポジトリのチェックアウト
-        uses: actions/checkout@v4
-
-      - name: タイムゾーンの設定
-        run: echo "TZ=Asia/Tokyo" >> $GITHUB_ENV
+        uses: actions/checkout@v3
 
       - name: Go のセットアップ
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v4
         with:
-          go-version: '1.23.0'
+          go-version: 1.21  # 適切なバージョンを指定
 
-      - name: 依存関係の取得
-        run: go mod download
+      - name: 環境変数の設定
+        env:
+          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
+          CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+        run: |
+          echo "SLACK_TOKEN and CHANNEL_ID are set"
 
       - name: スクリプトの実行
         env:
